...
    }    
    
    // MARK: - HideCompletedTasksButton Protocol
    
    func hideCompletedTasks() {
        completedTasksHidden = completedTasksHidden ? false : true
        let image : UIImage = completedTasksHidden ? #imageLiteral(resourceName: "completionFalse") : #imageLiteral(resourceName: "completionTrue")
        controller.navigationItem.leftBarButtonItem?.customView = hideCompletedCustomView(image: image)
        dataManager.update()
    }
    
    // MARK: - EditingButtonHandler Protocol
    
...
